[project]
name = "blink-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "art==6.2",
    "attrs==24.2.0",
    "blinkpy",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "frozenlist==1.4.1",
    "idna==3.9",
    "multidict==6.1.0",
    "pygame==2.6.0 ; sys_platform != 'win32'",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "requests==2.32.3",
    "secure-delete==0.0.2",
    "six==1.16.0",
    "sortedcontainers==2.4.0",
    "text-unidecode==1.3",
    "tqdm==4.66.5",
    "urllib3==2.2.3",
    "yarl==1.11.1",
]

[tool.uv.sources]
blinkpy = { path = "blinkpy" }
